--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "backend",
+  "name": "db",
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "exports": {
+    "./client": "./index.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
@@ -10,8 +13,6 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "@types/express": "^5.0.3",
-    "express": "^5.1.0",
-    "db": "*"
+    "prisma": "^6.15.0"
   }
 }
